# langchain-chatbox

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  实施步骤计划.md
config/: logging.yaml  presets.yaml
docs/: architecture.md
scripts/: init_db.py
src/: __init__.py  main.py
src/core/: __init__.py  chat_engine.py  config_manager.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  base.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  widgets.py
src/ui/web/: __init__.py
tests/: __init__.py  conftest.py  test_chat_engine.py  test_session_manager.py  test_step10_export_switch.py  test_step11_mysql.py  test_step3_crud.py  test_step5_presets.py  test_step6_chat_engine.py  test_step7_session_chat.py  test_step8_session_mgmt.py  test_step9_search.py  test_storage.py  test_user_manager.py
