[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于 LangChain 的多轮会话系统，同时作为教学项目"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "HYN823" },
]
license = { text = "MIT" }
keywords = ["langchain", "chatbot", "llm", "tui", "multi-turn-dialogue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架 — LLM 应用框架
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    # 数据库驱动 — 异步存储后端
    "aiosqlite>=0.20.0",
    "aiomysql>=0.2.0",
    # TUI 界面 — 命令行交互
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # 配置与数据校验
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
# 代码格式化与 Lint 配置
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort — import 排序
    "N",   # pep8-naming — 命名规范
    "UP",  # pyupgrade — 新语法建议
    "B",   # flake8-bugbear — 常见陷阱
    "C4",  # flake8-comprehensions — 推导式优化
]

[tool.ruff.format]
# 使用 ruff format 替代 black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# pytest 配置
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
# uv 开发依赖（替代弃用的 tool.uv.dev-dependencies）
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
